# nesemu-rs

./: Cargo.toml  flake.nix
src/: emulator.rs  game.rs  lib.rs  main.rs
src/cpu/: addressing_mode.rs  bus.rs  mem.rs  mod.rs  opcodes.rs  registers.rs  status.rs  trace.rs
src/nes/: mod.rs
